[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dankert-download"
version = "0.1.0"
description = "dankert download."
readme = "README.md"
authors = [
  {name = "DanKert", email = "dan.kert.official@gmail.com"}
]
license = {text = "The Unlicense"}
requires-python = ">=3.7"
keywords = ["downloader", "dankert", "video", "cli", "telegram"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: The Unlicense (Unlicense)",
  "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/dan-kert"
"Source" = "https://github.com/dan-kert/dankert-download"
